<resources>
    <string name="app_name">MebkPan</string>
    <string name="login">开始使用</string>

    <!--    左侧菜单栏-->
    <string name="Settings">设置</string>
    <string name="Help">意见与反馈</string>
    <!--    底部导航栏-->
    <string name="File">文件</string>
    <string name="Img">相册</string>

    <string name="email">邮箱</string>
    <string name="pwd">密码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_file">文件</string>
    <string name="text_img">相册</string>
    <!--    右上角菜单栏-->
    <string name="list_item">下载列表</string>
    <string name="last_refresh_time">上次刷新时间</string>
    <string name="size">文件大小:</string>
    <string name="policy">存储策略:</string>
    <string name="dir">文件路径:</string>
    <string name="create_time">创建时间:</string>
    <string name="alert_time">修改时间:</string>
    <string name="download_client">正在获取下载链接…</string>
    <string name="loading">正在获取…</string>
    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="more">更多</string>
    <string name="file">文件</string>
    <string name="transmit">传输列表</string>
    <string name="upload">上传</string>
    <string name="downloading">下载中</string>
    <string name="history_download">下载历史</string>
    <string name="mine_share">我的分享</string>
    <string name="history_upload">上传历史</string>
    <string name="detailed_info"><![CDATA[详细信息>]]></string>
    <string name="cloud">网盘</string>
    <string name="move">移动</string>
    <string name="cancel">取消</string>
    <string name="separator"><![CDATA[>]]></string>
    <string name="share_pwd">使用密码保护</string>
    <string name="share_time">自动过期</string>
    <string name="share_preview">允许预览</string>
    <string name="sure">确定</string>
    <string name="share_download_count">下载次数:</string>
    <string name="share_expire">过期时间:</string>
    <string name="share_limit">下载限制</string>
    <string name="share_history">分享记录</string>
    <string name="share_info">分享详情</string>
    <string name="copy">复制</string>
    <string name="copy_share_client">复制分享链接</string>
    <string name="share_again">再次分享</string>
    <string name="share_create_time">分享时间</string>
    <string name="share_views">游览次数:</string>
    <string name="load_err">加载失败</string>
</resources>