<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/popupwindow_share_time_root"
    android:layout_height="match_parent"
    android:background="@color/gray_cc">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/popupwindow_share_time_download_tv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/share_download_count"
            app:layout_constraintBottom_toTopOf="@+id/popupwindow_share_time_sure_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/popupwindow_share_time_download_spinner" />

        <Spinner
            android:id="@+id/popupwindow_share_time_download_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:entries="@array/share_time_download_entity"
            app:layout_constraintBottom_toTopOf="@+id/popupwindow_share_time_sure_btn"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toEndOf="@+id/popupwindow_share_time_download_tv" />

        <TextView
            android:id="@+id/popupwindow_share_time_expire_tv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/share_expire"
            app:layout_constraintBottom_toTopOf="@+id/popupwindow_share_time_sure_btn"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="@+id/popupwindow_share_time_expire_spinner" />

        <Spinner
            android:id="@+id/popupwindow_share_time_expire_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:entries="@array/share_time_expire_entity"
            app:layout_constraintBottom_toTopOf="@+id/popupwindow_share_time_sure_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/popupwindow_share_time_expire_tv" />

        <Button
            android:id="@+id/popupwindow_share_time_sure_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/communism"
            android:text="@string/sure"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/popupwindow_share_time_cancel_btn" />

        <Button
            android:id="@+id/popupwindow_share_time_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/gray_cc"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>