<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popupwindow_share_pwd_root"
    android:background="@color/gray_cc">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/popupwindow_share_pwd_random_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/random_24"
            app:layout_constraintBottom_toBottomOf="@+id/popupwindow_share_pwd_textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/popupwindow_share_pwd_textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/popupwindow_share_pwd_textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:focusableInTouchMode="true"
            android:hint="@string/pwd"
            android:theme="@style/TextInputLayoutStyle"
            app:boxBackgroundMode="none"
            app:layout_constraintBottom_toTopOf="@+id/popupwindow_share_pwd_sure_btn"
            app:layout_constraintEnd_toStartOf="@+id/popupwindow_share_pwd_random_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleDrawable="@drawable/password_visible_invisible"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/popupwindow_share_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/popupwindow_share_pwd_sure_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/communism"
            android:text="@string/sure"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/popupwindow_share_pwd_cancel_btn" />

        <Button
            android:id="@+id/popupwindow_share_pwd_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/gray_cc"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>