<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_info_img"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_info_nickname"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/user_info_detailed_info"
        app:layout_constraintStart_toEndOf="@+id/user_info_img"
        app:layout_constraintTop_toTopOf="@+id/user_info_img"
        tools:text="张三" />

    <TextView
        android:id="@+id/user_info_account"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:textColor="@color/gray_8f"
        app:layout_constraintEnd_toStartOf="@+id/user_info_detailed_info"
        app:layout_constraintStart_toEndOf="@+id/user_info_img"
        app:layout_constraintTop_toBottomOf="@+id/user_info_nickname" />

    <TextView
        android:id="@+id/user_info_group"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:textColor="@color/gray_8f"
        app:layout_constraintBottom_toBottomOf="@+id/user_info_img"
        app:layout_constraintEnd_toStartOf="@+id/user_info_detailed_info"
        app:layout_constraintStart_toEndOf="@+id/user_info_img"
        app:layout_constraintTop_toBottomOf="@+id/user_info_account" />

    <TextView
        android:id="@+id/user_info_detailed_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/detailed_info"
        android:textColor="@color/gray_8f"
        app:layout_constraintBottom_toBottomOf="@+id/user_info_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_info_img" />


    <LinearLayout
        android:id="@+id/user_info_upload"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_info_img">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:src="@drawable/cloud_upload" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/history_upload"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_info_download"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/user_info_img">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:src="@drawable/cloud_download" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/history_download"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_info_share"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/user_info_img">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:src="@drawable/cloud_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/mine_share"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />


</androidx.constraintlayout.widget.ConstraintLayout>